objects/ssot__BillingScheduleGroupRelationship__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AssociatedBillSchdGrpId__c</fullName>
        <label>Associated Billing Schedule Group</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AssociatedBillSchdGrpPricingType__c</fullName>
        <label>Associated Billing Schedule Grp Pricing</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AssociatedBillSchdGrpRole__c</fullName>
        <label>Associated Billing Schedule Group Role</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Billing Schedule Group Relationship Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PrimaryBillSchdGrpId__c</fullName>
        <label>Primary Billing Schedule Group</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PrimaryBillSchdGrpRole__c</fullName>
        <label>Primary Billing Schedule Group Role</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProductRelationshipType__c</fullName>
        <label>Product Relationship Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
</CustomObject>